--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "set of reusable utils",
   "main": "index.ts",
   "scripts": {
-    "test": "npm run test",
+    "test": "jest",
     "build": "tsc --project tsconfig.json"
   },
   "repository": {
@@ -21,6 +21,9 @@
   },
   "homepage": "https://github.com/sergokovalenko/multitool#readme",
   "devDependencies": {
+    "@types/jest": "^27.0.1",
+    "jest": "^27.1.0",
+    "ts-jest": "^27.0.5",
     "typescript": "^4.4.2"
   }
 }
