--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,7 @@
     "experimentalDecorators": true,
     "strictPropertyInitialization": false
   },
-  "include": ["src", "./index.ts"],
+  "include": ["./index.ts"],
   "exclude": ["node_modules"],
   "watchOptions": {
     "watchFile": "useFsEvents",
