--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "rootDir": ".",
     "outDir": "./dist",
-    "lib": ["es2015", "es2016", "es2017", "esnext"],
+    "lib": ["es2015", "es2016", "es2017", "esnext", "dom"],
     "module": "esnext",
     "target": "es6",
     "sourceMap": false,
