--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "reusable-multitool",
   "author": "Sergei Kovalenko",
   "version": "0.1.0",
-  "description": "set of reusable utils",
+  "description": "Set of re-usable utils",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": ["dist/**/*"],
   "scripts": {
     "test": "jest",
-    "build": "tsc --project tsconfig.json"
+    "build": "tsc --project tsconfig.json",
+    "prepare" : "npm run build"
   },
   "repository": {
     "type": "git",
