--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
   "name": "reusable-multitool",
   "author": "Sergei Kovalenko",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Set of re-usable utils",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "files": ["dist/**/*"],
+  "files": [
+    "dist/**/*"
+  ],
   "scripts": {
     "test": "jest",
     "build": "tsc --project tsconfig.json",
-    "prepare" : "npm run build"
+    "prepare": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -25,8 +27,12 @@
   "homepage": "https://github.com/sergokovalenko/multitool#readme",
   "devDependencies": {
     "@types/jest": "^27.0.1",
+    "@types/react": "^17.0.37",
     "jest": "^27.1.0",
     "ts-jest": "^27.0.5",
     "typescript": "^4.4.2"
+  },
+  "dependencies": {
+    "react": "^17.0.2"
   }
 }
